<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title" >
        
        <Button 
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"         
            android:layout_marginLeft="8dp"
            android:background="@drawable/back_btn_bk"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>
        
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/monitor_title"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>
        
    </RelativeLayout>
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="center_vertical|center_horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/funtion_not_open"
        	android:textColor="#000000"
        	android:textSize="20sp"
        	/>
        
    </LinearLayout>
    
</LinearLayout>
