<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="#e5e5e5" >

        <RelativeLayout
            android:id="@+id/rl_local_pic"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/detail_menu_margin_top_up"
            android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="@string/local_pic"
                android:textColor="#000000" 
                android:textSize="25sp"/>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_photo_pic"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="#ffffff">

            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="@string/photo_pic"
                android:textColor="#000000"
                android:textSize="25sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_gallery"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:text="@string/gallery"
                android:textColor="#000000" 
                android:textSize="25sp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/pop_cancel"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/detail_menu_margin_top"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:text="@string/alert_cancel"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>
