<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bkblue"
              android:clickable="false">
    <RelativeLayout
            android:id="@+id/top"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:focusableInTouchMode="false">
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/longyi_01"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:cropToPadding="false"
                android:baselineAlignBottom="false"
                android:clickable="false" android:id="@+id/title"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loongyee"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#FFFFFF"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:focusableInTouchMode="false"
            android:layout_below="@id/top">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/icon"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginmessage"
                android:layout_alignParentLeft="false"
                android:layout_below="@+id/imageView"
                android:text="@string/loginmessage"
                android:textColor="#010101"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"/>
       </RelativeLayout>
        <RelativeLayout
                android:id="@+id/loginbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_below="@id/logo">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logintxt"
                android:background="@drawable/login"
                android:password="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:editable="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginbtn"
                android:layout_alignParentTop="false"
                android:background="@drawable/login"
                android:text="@string/login"
                android:layout_alignParentLeft="false"
                android:textSize="24dp"
                android:textColor="#ffffff"
                android:layout_marginTop="80dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_below="@id/loginbtn">>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userlogin"
                android:id="@+id/userlogin"
                android:onClick="onClick"
                android:textColor="#53f5ff"
                android:textSize="24dip"
                android:layout_centerHorizontal="true" android:clickable="true"/>
    </RelativeLayout>

</RelativeLayout>