<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bk"
              android:id="@+id/top">
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/subswitchtitle"
            android:id="@+id/subswitchtop"
            >
        <Button
                android:id="@+id/back"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/back"
                android:textSize="15sp"
                android:background="@drawable/subswitchback"
                android:layout_marginLeft="8dp"
                android:textStyle="bold" android:textColor="#ffffff"
                android:onClick="onClick"/>
        <TextView
                android:id="@+id/switchs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:textColor="#FFFFFF" android:text="@string/switchs"/>
    </RelativeLayout>
<ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_below="@id/subswitchtop">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            >
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/subswitchtop"
            android:id="@+id/subswitch1"
            android:background="#B0E0E6">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_04"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="14dp"
                android:id="@+id/settime1"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt1"
                android:text="@string/switchtxt1"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_alignTop="@+id/settime2"/>
        <ImageView
                android:id="@+id/subswitchturn1"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick"/>
    </RelativeLayout>
    <View
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_below="@id/subswitch1"
            android:background="#010000" />
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/line1"
            android:id="@+id/subswitch2"
            android:background="#B0E0E6">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_04"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/subswitchedit"
                android:id="@+id/settime2"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt2"
                android:text="@string/switchtxt2"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_alignTop="@+id/settime2"/>
        <ImageView
                android:id="@+id/subswitchturn2"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick"/>
    </RelativeLayout>
    <View
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="0.5dip"
            android:layout_below="@id/subswitch2"
            android:background="#010000" />
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/line2"
            android:id="@+id/subswitch3"
            android:background="#B0E0E6">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_04"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/subswitchedit"
                android:id="@+id/settime3"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt1"
                android:text="@string/switchtxt3"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_alignTop="@+id/settime2"/>
        <ImageView
                android:id="@+id/subswitchturn3"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick"/>
    </RelativeLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="0.5dip"
        android:layout_below="@id/subswitch3"
        android:background="#010000" />
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/line3"
            android:id="@+id/subswitch5"
            android:background="#B0E0E6">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_05"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/subswitchedit"
                android:id="@+id/settime5"
                android:onClick="onClick"
                android:focusable="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt1"
                android:text="@string/switchtxt4"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_alignTop="@+id/settime2"/>
        <ImageView
                android:id="@+id/subswitchturn5"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick"/>
    </RelativeLayout>
    <View
            android:id="@+id/line4"
            android:layout_width="wrap_content"
            android:layout_height="0.5dip"
            android:layout_below="@+id/subswitch5"
            android:background="#010000" />
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/line4"
            android:id="@+id/subswitch6"
            android:background="#B0E0E6">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_05"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:id="@+id/settime6"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt1"
                android:text="@string/switchtxt5"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                />
        <ImageView
                android:id="@+id/subswitchturn6"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick"/>
    </RelativeLayout>
    <View
            android:id="@+id/line5"
            android:layout_width="wrap_content"
            android:layout_height="0.5dip"
            android:layout_below="@+id/subswitch6"
            android:background="#010000" />
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_below="@id/line5"
            android:id="@+id/subswitch7"
            android:background="#B0E0E6"
            android:focusable="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/longyi_05"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/subswitchedit"
                android:id="@+id/settime7"
                android:onClick="onClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchtxt1"
                android:text="@string/switchtxt6"
                android:textColor="#010101"
                android:textSize="20dp"
                android:layout_marginLeft="100dip"
                android:layout_marginTop="16dip"/>
        <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:background="#010000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_alignTop="@+id/settime2"/>
        <ImageView
                android:id="@+id/subswitchturn7"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:src="@drawable/turnoff"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="onClick" android:longClickable="false"/>
    </RelativeLayout>
    <View
            android:id="@+id/line6"
            android:layout_width="wrap_content"
            android:layout_height="0.5dip"
            android:layout_below="@+id/subswitch7"
            android:background="#010000" />

    </RelativeLayout>
</ScrollView>
    <RelativeLayout
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subswitch_below">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:id="@+id/setting_time_btn"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_centerHorizontal="true"
                      android:layout_alignParentBottom="true"
                >
            <ImageButton
                    android:id="@+id/setting_time"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/switchclock"
                    android:src="@drawable/clockoff"
                    android:gravity="center"
                    android:textSize="20px"
                    />
            <Button
                    android:id="@+id/turn_off_all"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@drawable/switchalloff"
                    android:textSize="20sp"
                    android:text="@string/TurnOffAll"
                    android:onClick="onClick"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
